<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Graph">

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="48dp"
        android:layout_height="51dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo13"
        android:src="@drawable/_844435_home_house_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/heading"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="228dp"
        android:layout_height="33dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/daily_time_stats1"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toEndOf="@id/btnHome"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/start_date4"
        android:inputType="none"
        android:focusable="false"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/btnPlot"
        app:layout_constraintEnd_toStartOf="@+id/edTwo"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintVertical_bias="0.05"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/end_date4"
        android:inputType="none"
        android:focusable="false"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/btnPlot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edOne"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintVertical_bias="0.05"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnPlot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/plot_graph"
        android:textAllCaps="false"
        android:backgroundTint="@color/darker_orange2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edOne"
        android:layout_marginTop="16dp"
        app:layout_constraintVertical_bias="0.05" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPlot"
        android:layout_marginTop="16dp"
        app:layout_constraintVertical_bias="0.1" />


</androidx.constraintlayout.widget.ConstraintLayout>