<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="414dp"
        android:layout_height="189dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center" />


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="373dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443">


        <Spinner
            android:id="@+id/spnCategory"
            android:layout_width="233dp"
            android:layout_height="48dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="17dp"
            android:entries="@array/spinner_items" />

        <Button
            android:id="@+id/btnNewCategory"
            android:layout_width="115dp"
            android:layout_height="95dp"
            android:layout_marginTop="-7dp"
            android:backgroundTint="@color/darker_orange2"
            android:text="@string/new_category1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="373dp"
        android:layout_height="117dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613">

        <Button
            android:id="@+id/btnStartDate"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="-7dp"
            android:backgroundTint="@color/darker_orange2"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/txtStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="159dp"
        android:layout_height="117dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835">

        <Button
            android:id="@+id/btnStartTime"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="-7dp"
            android:backgroundTint="@color/darker_orange2"
            android:text="@string/start_time" />

        <TextView
            android:id="@+id/txtStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="159dp"
        android:layout_height="117dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835">

        <Button
            android:id="@+id/btnEndTime"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="-7dp"
            android:backgroundTint="@color/darker_orange2"
            android:text="@string/end_time" />

        <TextView
            android:id="@+id/txtEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnAddPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_picture"
        android:backgroundTint="@color/darker_orange2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.301" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="169dp"
        android:layout_height="54dp"
        android:text="@string/save"
        android:backgroundTint="@color/darker_orange2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.939" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="48dp"
        android:layout_height="51dp"
        android:contentDescription="@string/todo13"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/_844435_home_house_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>